espero que mude

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
 }
 
 .dropdown-content li a:hover {
-    background-color: lightblue;
+    background-color: #E2BEFF;
     color: white;
 }
 
