--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ body {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: rgb(193, 193, 215);
+    background-color:#E2BEFF; /* Adicionar uma cor de fundo leve */
+    background-color: #E2BEFF
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     list-style: none;
     padding: 0;
