--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
     top: 100%;
     left: 0;
     background-color:#E2BEFF; /* Adicionar uma cor de fundo leve */
-    background-color: #E2BEFF
+    background-color: #ead3fc
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     list-style: none;
     padding: 0;
